opam-version: "1.2"
maintainer: "yotambarnoy@gmail.com"
authors: ["Yotam Barnoy"]
homepage: "https://github.com/USERNAME/sample-application"
bug-reports: "https://github.com/USERNAME/sample-application/issues"
dev-repo: "https://github.com/USERNAME/sample-application.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
  "lwt"
  "cohttp"
  "websocket"
]
